--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <nav class="main-nav">
           <ul>
-            <li><a href="file:///D:/VS%20Code%20Files/Moon%20Theme/index.html">Home</a></li>    
-            <li><a href="file:///D:/VS%20Code%20Files/Moon%20Theme/gallery.html">Gallery</a></li>
+            <li><a href="index.html">Home</a></li>    
+            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="home">About</a></li>
           </ul>
         </nav>
